Add .gcloudignore and update .gitignore

--- a/.gcloudignore
+++ b/.gcloudignore
@@ -121,6 +121,7 @@ celerybeat.pid
 
 # Environments
 .env
+.env.yaml
 .venv
 env/
 venv/
@@ -158,19 +159,17 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+.vscode/settings.json
 
-**/*.DS_Store
+.env*
+; app/samples
+poetry.lock
+api
 
-**/*.files
-**/*.vscode
-**/*.code-workspace
-
-**/*.env
+temp
+**/*.ipynb
+labs_*
+DEPLOYMENT.md
 
 public/images/**/*
-
-poetry.lock
-
-**/*.ipynb
-
 
